# statsd-proxy

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml  rust.yml
src/: lib.rs  main.rs
tests/: integration_test.rs
