[package]
name = "statsd-proxy"
version = "0.1.0"
authors = ["o.ermakov <ermakovolegs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# common
async-std = { version = "1.6.5", features = ["attributes"] }
futures = { version="0.3.6", features = ["async-await"]}

# cli
structopt = "0.3.19"

# logging
log = { version = "0.4", features = ["std", "serde", "max_level_debug", "release_max_level_info"] }
env_logger = "0.7.1"

hashring = "0.2.0"
trust-dns-resolver = "0.19.5"
