[package]
name = "statsd-proxy"
version = "0.1.0"
authors = ["o.ermakov <ermakovolegs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# common
async-std = { version = "1.8.0", features = ["attributes"] }
futures = { version="0.3.9", features = ["async-await"]}

# cli
structopt = "0.3.21"

# logging
log = { version = "0.4", features = ["std", "serde", "max_level_debug", "release_max_level_info"] }
env_logger = "0.7.1"

hashring = "0.2.0"
fasthash = "0.4.0"
trust-dns-resolver = "0.20.0"

[dev-dependencies]
rand = "0.8.1"